--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -34,7 +34,7 @@ nav ul {
 
 nav ul li {
   margin-right: 20px;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 nav ul li a {
@@ -47,18 +47,22 @@ nav ul li a {
 }
 
 html.dark ul li a {
-  color: #fff
+  color: #fff;
 }
 
 nav ul li a::after {
   content: "";
   width: 0;
   height: 3px;
-  background: #e13131;
+  background: #2c068d;
   position: absolute;
   left: 0;
   bottom: -6px;
   transition: width 0.5s ease;
+}
+
+html.dark nav ul li a::after {
+  background: #f9f9f9;
 }
 
 nav ul li a:hover::after {
