--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   text-align: left;
-  padding: 0 8vw;
+  padding: 15px 8vw;
   overflow: hidden;
   position: relative;
 }
